--- a/numbers/Makefile
+++ b/numbers/Makefile
@@ -1,7 +1,7 @@
 CXX = g++-5
 CXXFLAGS = -std=c++14 -Wall -MMD
 EXEC = main
-OBJECTS = main.o sqrt.o fraction.o
+OBJECTS = main.o sqrt.o fraction.o complex.o
 DEPENDS = ${OBJECTS:.o=.d}
 
 ${EXEC}: ${OBJECTS}
